terraformSecurityGroupSqlSvr.tf
resource "aws_security_group" "passwordAPI_sqlsvr" {
  name = "passwordAPI_sqlsvr"
  description = "PasswordAPI - SSH and SQL Server Access"
  ingress {
    protocol = "tcp"
    from_port = 22
    to_port = 22
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  ingress {
    protocol = "tcp"
    from_port = 1433
    to_port = 1433
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  tags {
    Name = "PasswordAPI SqlSvr"
  }
}
